# urology_agent

./: .gitignore  README.md  call_schedule_template.csv  call_schedule_template.xlsx  changelog.md  package-lock.json
server/: -d  Dockerfile  README.md  SERVER_ARCHITECTURE.md  SERVER_DEPLOYMENT.md  create_qdrant_collection.py  fly.toml  main.py  pyproject.toml
server/.ebextensions/: 01-https.config  02-python.config  03-vpc-network.config  04-disk-size.config
server/.platform/nginx/conf.d/: upload_body_size.conf
server/app/: main.py  models.py
server/app/crew/: crew.py
server/app/data/: billing_cpt_codes.json  billing_cpt_modifiers.json  billing_icd10_codes.json  call_schedule.json
server/app/db/: chroma.sqlite3
server/app/routes/: add_document.py  all_patients.py  appointments.py  auth.py  billing.py  call_schedule.py  hello.py  id.py  patient.py  patient_info.py  patients.py  run_crew.py
server/app/services/: appointment_service.py  auth_service.py  billing_access.py  billing_codes_service.py  billing_cpt_lines.py  billing_submission_store.py  call_schedule_audit.py  call_schedule_changelog.py  call_schedule_import.py  call_schedule_service.py  client_service.py  crew_runner.py  entra_jwt.py  extract_appointment_data.py  graph_mail_service.py  local_file_lock.py  patient_embedder.py  patient_info_service.py  patient_name_cache_store.py  patient_name_refresh.py  s3_json_store.py  schedule_cache_store.py  token_service.py
server/scripts/: create_qdrant_collection.py  populate_patient_name_cache.py
server/tests/: conftest.py  test_auth_route.py  test_billing_access.py  test_billing_codes_route.py  test_billing_codes_service.py  test_billing_cpt_lines.py  test_billing_route.py  test_billing_submission_store.py  test_billing_validation.py  test_call_schedule_route.py  test_graph_mail_service.py  test_patient_info_helpers.py  test_patients_route.py  test_pdf_extraction.py  test_s3_json_store.py  test_s3_json_store_moto.py  test_stores_s3_moto.py
(+92 files in other folders)
