[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=0.126.0",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "uvicorn>=0.34.3",
    "python-multipart>=0.0.5",
    "PyPDF2==3.0.1",
    "xmltodict==0.14.2",
    "boto3==1.39.3",
    "langchain_aws==0.2.27"
]
[tool.uv]
package = true

[project.scripts]
app = "app.main:main"