[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=0.126.0",
    "fastapi>=0.115.12",
    "google-genai>=1.20.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "pydantic>=2.11.5",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.3",
    "PyPDF2==3.0.1",
    "xmltodict==0.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
]
[tool.uv]
package = true

[project.scripts]
app = "app.main:main"
