[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.0",
    "crewai[tools]>=0.126.0",
    "fastapi>=0.115.12",
    "google-genai>=1.20.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.5",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.3",
    "pdfplumber>=0.11.0",
    "xmltodict==0.14.2",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.20",
]
[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
app = "app.main:main"
